initial rebrand and Sysdig Secure specialization
Most of the work here was by @aricallen, with suggestions and help from
the Anchore engineering team.

- adjust plugin configuration to expect Sysdig API token instead of
username/password
- remove UI for 'local' mode, as we don't plan to support that with
Sysdig Image Scanning

--- a/src/main/resources/com/anchore/jenkins/plugins/anchore/AnchoreBuilder/help-anchoreioPass.html
+++ b/src/main/resources/com/anchore/jenkins/plugins/anchore/AnchoreBuilder/help-anchoreioPass.html
@@ -1,5 +1,5 @@
 <div>
 
-  Your password for the associated username on https://anchore.io
+  Your password for the associated username on https://sysdig secure
 
 </div>
