--- a/src/main/resources/com/anchore/jenkins/plugins/anchore/AnchoreBuilder/help-anchoreioUser.html
+++ b/src/main/resources/com/anchore/jenkins/plugins/anchore/AnchoreBuilder/help-anchoreioUser.html
@@ -1,5 +1,5 @@
 <div>
 
-  Your username on https://anchore.io that has access to a custom policy bundle to sync with your local anchore installation
+  Your username on https://sysdig secure that has access to a custom policy to sync with your local sysdig secure installation
 
 </div>
