--- a/src/main/resources/com/anchore/jenkins/plugins/anchore/AnchoreBuilder/help-name.html
+++ b/src/main/resources/com/anchore/jenkins/plugins/anchore/AnchoreBuilder/help-name.html
@@ -1,7 +1,7 @@
 <div>
 
-  Name of the file that contains a list of container images for anchore to analyze, evaluate policy, and run queries against. The
+  Name of the file that contains a list of container images for sysdig secure to analyze, evaluate policy, and run queries against. The
   format for each line is "imageId /path/to/Dockerfile", where the Dockerfile is optional. This file must be made available (created by
-  a prior step) to Anchore Container Image Scanner plugin.
+  a prior step) to Sysdig Secure Container  Image Scanner plugin.
 
 </div>
