--- a/src/main/webapp/help/help-AnchoreEngineMode.html
+++ b/src/main/webapp/help/help-AnchoreEngineMode.html
@@ -1,5 +1,5 @@
 <div>
 
-  If selected, plugin interacts with the configured Anchore Engine installation for scanning images.
+  If selected, plugin interacts with the configured Sysdig Secure Engine installation for scanning images.
 
 </div>
