--- a/src/main/resources/com/anchore/jenkins/plugins/anchore/AnchoreBuilder/help-bailOnFail.html
+++ b/src/main/resources/com/anchore/jenkins/plugins/anchore/AnchoreBuilder/help-bailOnFail.html
@@ -1,6 +1,6 @@
 <div>
 
-  If selected or set to 'true', the Anchore Container Image Scanner step will cause the build to fail if the policy evaluation result
+  If selected or set to 'true', the Sysdig Secure Container  Image Scanner step will cause the build to fail if the policy evaluation result
   is FAIL. Default value: 'true'
 
 </div>
