--- a/src/main/resources/com/anchore/jenkins/plugins/anchore/AnchoreBuilder/help-bailOnWarn.html
+++ b/src/main/resources/com/anchore/jenkins/plugins/anchore/AnchoreBuilder/help-bailOnWarn.html
@@ -1,6 +1,6 @@
 <div>
 
-  If selected or set to 'true', the Anchore Container Image Scanner step will cause the build to fail if the policy check result is
+  If selected or set to 'true', the Sysdig Secure Container  Image Scanner step will cause the build to fail if the policy check result is
   WARN. Default value: 'false'
 
 </div>
