--- a/src/main/resources/com/anchore/jenkins/plugins/anchore/AnchoreBuilder/help-bundleFileOverride.html
+++ b/src/main/resources/com/anchore/jenkins/plugins/anchore/AnchoreBuilder/help-bundleFileOverride.html
@@ -1,9 +1,9 @@
 <div>
 
-  Name of the file that contains a custom anchore policy bundle to be
-  used by Anchore policy evaluation engine. If this file does not
-  exist or the field is left blank, anchore will attempt to use any
-  previously synced/cached policy bundles that you may have, or will
+  Name of the file that contains a custom sysdig secure policy to be
+  used by Sysdig Secure policy evaluation engine. If this file does not
+  exist or the field is left blank, sysdig secure will attempt to use any
+  previously synced/cached policys that you may have, or will
   fail evaluation if no bundle can be found or used.
 
 </div>
