--- a/src/main/resources/com/anchore/jenkins/plugins/anchore/AnchoreBuilder/help-containerId.html
+++ b/src/main/resources/com/anchore/jenkins/plugins/anchore/AnchoreBuilder/help-containerId.html
@@ -1,5 +1,5 @@
 <div>
 
-  Name of the Anchore container to be employed by the plugin (instance of the specified Anchore container image).
+  Name of the Sysdig Secure container to be employed by the plugin (instance of the specified Sysdig Secure container image).
 
 </div>
