--- a/src/main/resources/com/anchore/jenkins/plugins/anchore/AnchoreBuilder/help-containerImageId.html
+++ b/src/main/resources/com/anchore/jenkins/plugins/anchore/AnchoreBuilder/help-containerImageId.html
@@ -1,6 +1,6 @@
 <div>
 
-  Container image ID/repo:tag of the docker container image that has Anchore installed (default is anchore/jenkins:latest from
+  Container image ID/repo:tag of the docker container image that has Sysdig Secure installed (default is anchore/jenkins:latest from
   DockerHub).
 
 </div>
