--- a/src/main/resources/com/anchore/jenkins/plugins/anchore/AnchoreBuilder/help-doCleanup.html
+++ b/src/main/resources/com/anchore/jenkins/plugins/anchore/AnchoreBuilder/help-doCleanup.html
@@ -1,6 +1,6 @@
 <div>
 
-  If selected or set to 'true', all images in the input file will be flushed from the Anchore database at the end of plugin execution.
+  If selected or set to 'true', all images in the input file will be flushed from the Sysdig Secure database at the end of plugin execution.
   Default value: 'false'
 
 </div>
