--- a/src/main/resources/com/anchore/jenkins/plugins/anchore/AnchoreBuilder/help-localVol.html
+++ b/src/main/resources/com/anchore/jenkins/plugins/anchore/AnchoreBuilder/help-localVol.html
@@ -1,6 +1,6 @@
 <div>
 
-  If specified, the plugin will mount this directory as a volume in the running Anchore container at /root/.anchore. All Anchore
-  configuration data is stored here. If left blank, the container will use internal local storage to store Anchore data.
+  If specified, the plugin will mount this directory as a volume in the running Sysdig Secure container at /root/.anchore. All Anchore
+  configuration data is stored here. If left blank, the container will use internal local storage to store Sysdig Secure data.
 
 </div>
