--- a/src/main/resources/com/anchore/jenkins/plugins/anchore/AnchoreBuilder/help-modulesVol.html
+++ b/src/main/resources/com/anchore/jenkins/plugins/anchore/AnchoreBuilder/help-modulesVol.html
@@ -1,7 +1,7 @@
 <div>
 
-  If specified, the plugin will mount this directory as a volume in the running Anchore container. Any Anchore modules packages (such
-  as anchore-modules-*.rpm) in this directory will be installed when the container starts for the first time. Leave this field blank if
-  you do not have extra anchore modules package(s) to install
+  If specified, the plugin will mount this directory as a volume in the running Sysdig Secure container. Any Sysdig Secure modules packages (such
+  as sysdig-secure-modules-*.rpm) in this directory will be installed when the container starts for the first time. Leave this field blank if
+  you do not have extra sysdig secure modules package(s) to install
 
 </div>
