--- a/src/main/resources/com/anchore/jenkins/plugins/anchore/AnchoreBuilder/help-policyBundleId.html
+++ b/src/main/resources/com/anchore/jenkins/plugins/anchore/AnchoreBuilder/help-policyBundleId.html
@@ -1,6 +1,6 @@
 <div>
 
-  ID of the policy bundle on Anchore Engine to be used for policy evaluations. If empty, the policy bundle marked active on
-  Anchore Engine will be used by default.
+  ID of the policy on Sysdig Secure Engine to be used for policy evaluations. If empty, the policy marked active on
+  Sysdig Secure Engine will be used by default.
 
 </div>
