--- a/src/main/resources/com/anchore/jenkins/plugins/anchore/AnchoreBuilder/help-policyName.html
+++ b/src/main/resources/com/anchore/jenkins/plugins/anchore/AnchoreBuilder/help-policyName.html
@@ -1,6 +1,6 @@
 <div>
 
-  Name of the file that contains a custom policy to be used by Anchore policy evaluation engine. If this file does not exist or the
-  field is left blank, Anchore will use its default policy.
+  Name of the file that contains a custom policy to be used by Sysdig Secure policy evaluation engine. If this file does not exist or the
+  field is left blank, Sysdig Secure will use its default policy.
 
 </div>
