--- a/src/main/resources/com/anchore/jenkins/plugins/anchore/AnchoreBuilder/help-useCachedBundle.html
+++ b/src/main/resources/com/anchore/jenkins/plugins/anchore/AnchoreBuilder/help-useCachedBundle.html
@@ -1,5 +1,5 @@
 <div>
 
-  Check this in order to use a previously synced policy bundle (if one exists) in the case where login to anchore.io or bundle sync fails for any reason.
+  Check this in order to use a previously synced policy (if one exists) in the case where login to sysdig secure or bundle sync fails for any reason.
 
 </div>
