--- a/src/main/resources/com/anchore/jenkins/plugins/anchore/AnchoreBuilder/help-userScripts.html
+++ b/src/main/resources/com/anchore/jenkins/plugins/anchore/AnchoreBuilder/help-userScripts.html
@@ -1,7 +1,7 @@
 <div>
 
-  Optional directory that contains user defined Anchore analyzer/gate/query modules that will be executed in addition to the built in
-  analyzer/gate/queries modules. If this directory does not exist or the field is left blank, Anchore will run only its default
+  Optional directory that contains user defined Sysdig Secure analyzer/gate/query modules that will be executed in addition to the built in
+  analyzer/gate/queries modules. If this directory does not exist or the field is left blank, Sysdig Secure will run only its default
   modules.
 
 </div>
