--- a/src/main/resources/com/anchore/jenkins/plugins/anchore/AnchoreQuery/help-query.html
+++ b/src/main/resources/com/anchore/jenkins/plugins/anchore/AnchoreQuery/help-query.html
@@ -1,5 +1,5 @@
 <div>
 
-  Any query that Anchore supports. Results of the query will be added to the anchore report upon plugin completion.
+  Any query that Sysdig Secure supports. Results of the query will be added to the sysdig secure report upon plugin completion.
 
 </div>
