--- a/src/main/webapp/help/help-inlineScanning.html
+++ b/src/main/webapp/help/help-inlineScanning.html
@@ -1,7 +1,6 @@
 <div>
 
-  The Inline Scanning mode will perform the scan within the runner in the same machine where the image was built,
-  without the container image ever leaving the pipeline. This mode currently requires that
-  Jenkins has access to the Docker socket.
+  The Inline Scanning mode will perform the scan within the worker in the same machine where the image was built,
+  without the container image ever leaving the pipeline.
 
 </div>
