--- a/src/main/webapp/help/help-OverrideAECredentials.html
+++ b/src/main/webapp/help/help-OverrideAECredentials.html
@@ -1,6 +1,7 @@
 <div>
 
-  Override plugin's global settings for Sysdig Secure Engine username and password. The override is applicable only to builds in this job and
-  does not change the global settings.
+    Override plugin's global settings for Sysdig Secure Engine username and password. The override is applicable only to
+    builds in this job and
+    does not change the global settings.
 
 </div>
