--- a/src/main/webapp/help/help-OverrideAEURL.html
+++ b/src/main/webapp/help/help-OverrideAEURL.html
@@ -1,6 +1,7 @@
 <div>
 
-  Override plugin's global settings for Sysdig Secure Engine URL. The override is applicable only to builds in this job and does not change
-  the plugin wide global settings.
+    Override plugin's global settings for Sysdig Secure Engine URL. The override is applicable only to builds in this
+    job and does not change
+    the plugin wide global settings.
 
 </div>
