update warning message and check for empty version

--- a/src/main/webapp/help/help-CliVersionToApply.html
+++ b/src/main/webapp/help/help-CliVersionToApply.html
@@ -1,4 +1,5 @@
 <div>
-    Specifies which sysdig-cli-scanner version to use for scanning container images. If no version is specified, 
-    the default version will be used.
+    Allows for overriding the default Sysdig CLI scanner version. The Default option will use the version the plugin was
+    tested against. The Latest option will use the latest available version. Custom will allow you to specify a specific
+    version to use.
 </div>
