Remove latest option and default version applied

--- a/src/main/webapp/help/help-CliVersionToApply.html
+++ b/src/main/webapp/help/help-CliVersionToApply.html
@@ -1,5 +1,4 @@
 <div>
     Allows for overriding the default Sysdig CLI scanner version. The Default option will use the version the plugin was
-    tested against. The Latest option will use the latest available version. Custom will allow you to specify a specific
-    version to use.
+    tested against. Custom will allow you to specify a specific version to use.
 </div>
