--- a/src/main/webapp/help/help-sysdigEnv.html
+++ b/src/main/webapp/help/help-sysdigEnv.html
@@ -1,3 +1,4 @@
 <div>
-    Sysdig Secure Endpoint. In SaaS, this value is region-dependent and is auto-completed on the Get Started page in the UI.
+    Sysdig Secure Endpoint. 
+    In SaaS, this value is region-dependent and is auto-completed on the Get Started page in the UI.
 </div>
