message and help fix

--- a/src/main/webapp/help/help-secureAPIToken.html
+++ b/src/main/webapp/help/help-secureAPIToken.html
@@ -1,5 +1,3 @@
 <div>
-    Sysdig Secure Endpoint. 
-    In SaaS, this value is region-dependent and is auto-completed on the Get Started page in the UI.
-
+    Retrieve this from Settings > User Profile in Sysdig Secure.
 </div>
